[package]
name = "vulc_window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.32.3"
bytemuck = "1.13.0"
vulkano-win = "0.32.0"
vulkano-shaders = "0.32.0"
winit = "0.28.3"
image = "0.24.5"
fbxcel-dom = "0.0.9"
anyhow = "1.0.68"
cgmath = {version = "0.18", features = ["swizzle"]}
